# reflections

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  migrate_old_data.py  pyproject.toml
database/: __init__.py
journal/: admin.py  forms.py  models.py  urls.py  views.py
journal/migrations/: 0001_initial.py  0002_userprofile_alter_journalentry_options_and_more.py
journal/templates/journal/: base.html  journal.html  login.html  register.html
journal/templates/journal/partials/: entries.html  entry_form.html
journal_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_views.py
